# coreDiff

./: .gitignore  README.md  coreDiff.py  main.py  pyproject.toml  sensei.py
src/: config.py  logging.py  trainer.py  util.py
src/corediff/: __init__.py  config.py  generate.py  log.py  main.py  trainer.py  utils.py
src/corediff/data/: dataset.py
src/corediff/models/: bottleneck.py  decoder.py  diffusion.py  diffusor.py  encoder.py
src/data/: dataset.py
src/models/: bottleneck.py  decoder.py  diffusor.py  encoder.py
